@@ -1,5 +1,5 @@
 (define (force-output #!optional (port (current-output-port)))
-  ((primitive-virtual-method "java.io.OutputStream" "flush" "void" ())
+  ((primitive-virtual-method "java.io.Writer" "flush" "void" ())
    port))
 
 (define (newline #!optional (port (current-output-port)))
@@ -9,3 +9,45 @@
 
 (define (eof-object? obj)
   (eq? obj #!eof))
+
+(define (input-port-line-number port)
+  (+ 1
+     ((primitive-virtual-method "kawa.lang.LineBufferedReader" "getLineNumber"
+				"int" ())
+      port)))
+
+(define (set-input-port-line-number! port num)
+  ((primitive-virtual-method "kawa.lang.LineBufferedReader" "setLineNumber"
+			     "void" ("int"))
+   port (- num 1)))
+
+(define (input-port-column-number port)
+  ((+ 1
+      ((primitive-virtual-method "kawa.lang.LineBufferedReader"
+				 "getColumnNumber" "int" ())
+       port))))
+
+(define (default-prompter port)
+  (string-append "#|kawa:"
+		 (number->string (input-port-line-number port))
+		 "#| "))
+
+(define (input-port-prompter port)
+  ((primitive-virtual-method "kawa.lang.TtyInPort" "getPrompter"
+			       "kawa.lang.Procedure" ())
+   port))
+
+(define (set-input-port-prompter! port prompter)
+  ((primitive-virtual-method "kawa.lang.TtyInPort" "setPrompter"
+			       <void> ("kawa.lang.Procedure"))
+   port prompter))
+
+(define (transcript-on filename)
+  ((primitive-virtual-method "kawa.lang.OutPort" "setLogFile"
+			     <void> ("String"))
+   (current-output-port) filename))
+
+(define (transcript-off)
+  ((primitive-virtual-method "kawa.lang.OutPort" "closeLogFile"
+			     <void> ())
+   (current-output-port)))
