@@ -1,9 +1,8 @@
 
 (define (make-string n #!optional (ch #\Space))
-  ((primitive-constructor "kawa.lang.FString" ("int" "char"))
+  ((primitive-constructor <string> (<int> <char>))
    n ch))
 
 (define (string-length str)
-  ((primitive-virtual-method "kawa.lang.FString" "length"
-			     "int" ())
+  ((primitive-virtual-method <string> "length" <int> ())
    str))
